--- a/p_001_APP/src/components/Login/login.styles.scss
+++ b/p_001_APP/src/components/Login/login.styles.scss
@@ -5,7 +5,10 @@
     justify-content: center;
     align-items: center;
 
-    background: radial-gradient(black, white);
+    background-image: url('../../assets/img/pot701.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
     & .login-form {
         display: flex;
@@ -14,19 +17,18 @@
         justify-content: center;
         padding: 2rem;
         background-color: aliceblue;
-        border-radius: 5%;
-        width: 30%;
+        width: 15rem;
 
         & .login-control {
             display: block;            
         }
 
         .login-input__container {
-            width: 100%;
+            width: 80%;
         }
 
         .login-input {
-            height: 2rem;
+            margin-top: 1rem;
             width: 100%;
         }
 
