--- a/p_001_APP/src/view/MainPage/main-page.style.scss
+++ b/p_001_APP/src/view/MainPage/main-page.style.scss
@@ -2,3 +2,15 @@
     height: 75px;
     width: 78px;
 }
+
+.preloader {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .svg {
+        background-image: url("../../assets/svg/spinning-circles.svg");
+    }
+}
